--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </div>
 
   <div class="gallery">
-      <img src="assets/donate.jpg" alt="Hand Holding Money " width="700" height="700">
+      <img src="donate.jpg" alt="Hand Holding Money " width="700" height="700">
     <div class="desc">
       <p>~Donate~</p>
       <p>Making a donation is the ultimate sign of solidarity.Actions speak louder than words </p>
@@ -97,7 +97,7 @@
 
 
   <div class="gallery">
-      <img src="assets/petition.jpg" alt="Signature on a piece of paper" width="700" height="700">
+      <img src="petition.jpg" alt="Signature on a piece of paper" width="700" height="700">
     <div class="desc">
       <p>~Petition~</p>
       <p>People of character do not allow thier opinions to be silenced.  </p>
@@ -107,7 +107,7 @@
 
 
   <div class="gallery">
-      <img src="assets/protest.jpg" alt="People marching and protesting down the streets for BLM" width="700" height="700">
+      <img src="protest.jpg" alt="People marching and protesting down the streets for BLM" width="700" height="700">
     <div class="desc">
       <p>~Protest~</p>
       <p>It is better to protest than to accept injustice </p>
